Invoking IPv6 network device address event may sleep with the following non-sleepable locks held: exclusive sleep mutex vtnet0-rx0 (vtnet0-rx0) r = 0 (0xfffff800035d4780) locked @ /usr/src/sys/dev/virtio/network/if_vtnet.c:2180 stack backtrace: #0 0xffffffff80c7c851 at witness_debugger+0x71 #1 0xffffffff80c7d96d at witness_warn+0x40d #2 0xffffffff80e0d411 at in6_update_ifa+0xfc1 #3 0xffffffff80e3502a at nd6_ra_input+0x125a #4 0xffffffff80e07511 at icmp6_input+0x7f1 #5 0xffffffff80e20c9d at ip6_input+0xe7d #6 0xffffffff80d532b1 at netisr_dispatch_src+0xb1 #7 0xffffffff80d35d7e at ether_demux+0x17e #8 0xffffffff80d3740c at ether_nh_input+0x40c #9 0xffffffff80d532b1 at netisr_dispatch_src+0xb1 #10 0xffffffff80d36271 at ether_input+0xa1 #11 0xffffffff80a4a962 at vtnet_rxq_eof+0x892 #12 0xffffffff80a4a027 at vtnet_rx_vq_process+0x97 #13 0xffffffff80bcaa69 at ithread_loop+0x279 #14 0xffffffff80bc7520 at fork_exit+0x80 #15 0xffffffff810905ee at fork_trampoline+0xe lock order reversal: (sleepable after non-sleepable) 1st 0xfffff800035d4780 vtnet0-rx0 (vtnet0-rx0, sleep mutex) @ /usr/src/sys/dev/virtio/network/if_vtnet.c:2180 2nd 0xffffffff81fbc138 in6_multi_sx (in6_multi_sx, sx) @ /usr/src/sys/netinet6/in6_mcast.c:1184 lock order vtnet0-rx0 -> in6_multi_sx attempted at: #0 0xffffffff80c7c58c at witness_checkorder+0xdcc #1 0xffffffff80c177b7 at _sx_xlock+0x67 #2 0xffffffff80e15c41 at in6_joingroup+0x31 #3 0xffffffff80e0d7c7 at in6_update_ifa+0x1377 #4 0xffffffff80e3502a at nd6_ra_input+0x125a #5 0xffffffff80e07511 at icmp6_input+0x7f1 #6 0xffffffff80e20c9d at ip6_input+0xe7d #7 0xffffffff80d532b1 at netisr_dispatch_src+0xb1 #8 0xffffffff80d35d7e at ether_demux+0x17e #9 0xffffffff80d3740c at ether_nh_input+0x40c #10 0xffffffff80d532b1 at netisr_dispatch_src+0xb1 #11 0xffffffff80d36271 at ether_input+0xa1 #12 0xffffffff80a4a962 at vtnet_rxq_eof+0x892 #13 0xffffffff80a4a027 at vtnet_rx_vq_process+0x97 #14 0xffffffff80bcaa69 at ithread_loop+0x279 #15 0xffffffff80bc7520 at fork_exit+0x80 #16 0xffffffff810905ee at fork_trampoline+0xe Starting Network: lo0 vtnet0.
^Triage: assign to net@ (appears to be provoked by ipv6 usage).